--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   }
 }
